<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="title">Design and implementation of a program for smile detection on mobile devices running Android</string>
    <string name="app_name">Smile Detection</string>
    <string name="title_activity_main">Smile Detection</string>
    <string name="btn_runSmileDetect">Smile Detection</string>
    <string name="btn_runTimer">Clock</string>
    <string name="btn_runClose">Close</string>
    <string name="menu_help">Help</string>
    <string name="menu_setting_ang">English</string>
    <string name="menu_setting_pl">Polish</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_aboutme">About me</string>
    <string name="title_activity_main2"> </string>
    <string name="title_activity_timer">Timer</string>
    <string name="btn_happy">Happy photo</string>
    <string name="btn_timer_time">Alarm</string>
    <string name="btn_timer_nap">Nap</string>
    <string name="btn_timer_run">Go go go!</string>
    <string name="btn_happyTime">Points for smile</string>
    <string name="pickPhoto">Get photo!</string>
    <string name="savePhoto">Save smile fasec</string>
    <string name="getSmileFromPhoto">Get smiles</string>
    <string name="menu_fdsettings">Face detection settings</string>
    <string name="menu_sdsettings">Smile detection settings</string>
    <string name="menu_faceSize">Face size</string>
    <string name="menu_size10">10%</string>
    <string name="menu_size20">20%</string>
    <string name="menu_size30">30%</string>
    <string name="menu_size40">40%</string>
    <string name="menu_size50">50%</string>
    <string name="menu_faceScale">Face scale</string>
    <string name="faceNeiSettings">Count of neighbors</string>
    <string name="btn_reset">Reset points</string>
    <string name="tv_keepSmile">Keep Smile</string>
    <string name="menu_language">Language</string>
    <string name="resoultTimer">Timer stoped</string>
    <string name="menu_size5">5%</string>
    <string name="run">Run</string>
    <string name="close">Close</string>
    <string name="helpInfo">A full description of the functionality of the design document is located</string>
    <string name="menu_smileSize">Smile size</string>
</resources>