<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/wallpapaer"
    tools:context="salsa.mac.smile_detection.MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:text="@string/btn_runSmileDetect"
        android:background="@color/btn_main"
        android:id="@+id/runSmileDetect"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:text="@string/btn_runTimer"
        android:layout_marginTop="5dp"
        android:background="@color/btn_main"
        android:id="@+id/runTimer"
        android:layout_above="@+id/btn_happyTime"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />



    <Button
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:text="@string/btn_happy"
        android:layout_marginTop="5dp"
        android:background="@color/btn_main"
        android:id="@+id/btn_pick_hPhoto"
        android:layout_above="@+id/runSmileDetect"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="100dp"
        android:layout_marginTop="5dp"
        android:layout_height="40dp"
        android:text="@string/btn_happyTime"
        android:id="@+id/btn_happyTime"
        android:background="@color/btn_main"
        android:layout_above="@+id/btn_pick_hPhoto"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>
