<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
    android:background="@drawable/wpa"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
tools:context=".HappyPhotoActivity">

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/pickPhoto"
        android:id="@+id/btn_pickPhoto"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

   <ImageView
       android:layout_width="350dp"
       android:layout_height="300dp"
       android:id="@+id/imageView"
       android:layout_gravity="center_horizontal"
       android:layout_centerVertical="true"
       android:layout_alignParentLeft="true"
       android:layout_alignParentStart="true"></ImageView>

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/savePhoto"
        android:id="@+id/btn_saveSmileFromPhoto"
        android:layout_below="@+id/imageView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/btn_getSmileFromPhoto" />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/getSmileFromPhoto"
        android:id="@+id/btn_getSmileFromPhoto"
        android:layout_below="@+id/imageView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="Show Galery"
        android:id="@+id/btn_showGalery"
        android:layout_below="@+id/btn_saveSmileFromPhoto"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>
