<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/wpa"
    tools:context="salsa.mac.smile_detection.TimerActivity">

    <TimePicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/timePicker"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/btn_timer_time"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true" />

    <Button
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:text="@string/btn_timer_run"
        android:id="@+id/btn_timer_run"
        android:layout_above="@+id/timer_text"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:text="@string/btn_timer_time"
        android:id="@+id/btn_timer_time"
        android:layout_above="@+id/btn_timer_run"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:text="@string/btn_timer_nap"
        android:id="@+id/btn_timer_nap"
        android:layout_above="@+id/btn_timer_run"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="00:00:00"
        android:id="@+id/timer_text"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true" />
</RelativeLayout>
